[project]
name = "modelpulse"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.38.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["apps/api"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
